adding work completed in-class and section.

--- a/section-6-arctic-communities.ipynb
+++ b/section-6-arctic-communities.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b4d83adf-512b-448e-a7de-6e51d7442d0b",
    "metadata": {
     "tags": []
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f5c80bbb-120a-41dc-a803-b552a52beb5a",
    "metadata": {
     "tags": []
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b417551c-8976-459d-8503-efda84833bc5",
    "metadata": {
     "tags": []
@@ -143,7 +143,7 @@
        "4  MULTIPOLYGON (((20.62217 69.03687, 20.49199 69...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ac43242f-f675-4912-9626-1ac3f1e9c4c9",
    "metadata": {
     "tags": []
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ffa496d1-6b6a-4736-9166-47fbcc018ce1",
    "metadata": {
     "tags": []
@@ -228,7 +228,7 @@
        "14  POLYGON ((31.76338 52.10107, 31.57373 52.10811...  >"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5bf458d0-2ddc-467c-b53d-482e17969ccf",
    "metadata": {
     "tags": []
@@ -284,7 +284,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3fb243eb-ace2-49d0-9c4c-7fbc964af89b",
    "metadata": {
     "tags": []
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e6e545e4-dffe-4d79-9679-e7e2e41e154f",
    "metadata": {
     "tags": []
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d8013c50-5f6e-41eb-93f8-e234dbeef35c",
    "metadata": {
     "tags": []
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "753c9595-a997-4656-804c-670e62a85030",
    "metadata": {
     "tags": []
@@ -380,157 +380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a303dd3b-03b8-418d-8519-911e4cf4c9e7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>admin</th>\n",
-       "      <th>country</th>\n",
-       "      <th>n_communities</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>115</td>\n",
-       "      <td>POLYGON ((-132.74687 56.52568, -132.75762 56.5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>115</td>\n",
-       "      <td>POLYGON ((-132.77988 56.24727, -132.83096 56.2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>115</td>\n",
-       "      <td>POLYGON ((-134.31274 58.22891, -134.31987 58.2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>115</td>\n",
-       "      <td>POLYGON ((-145.11851 60.33711, -145.15049 60.3...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>United States of America</td>\n",
-       "      <td>US</td>\n",
-       "      <td>115</td>\n",
-       "      <td>POLYGON ((-144.56563 59.81841, -144.61357 59.8...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>476</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>7</td>\n",
-       "      <td>POLYGON ((-109.16641 67.98237, -109.05391 67.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>477</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>7</td>\n",
-       "      <td>POLYGON ((-108.09272 67.00518, -107.96646 66.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>478</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>7</td>\n",
-       "      <td>POLYGON ((-109.32314 67.99087, -109.36084 67.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>479</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>7</td>\n",
-       "      <td>POLYGON ((-139.04312 69.57690, -139.12573 69.5...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>480</th>\n",
-       "      <td>Belarus</td>\n",
-       "      <td>BY</td>\n",
-       "      <td>8</td>\n",
-       "      <td>POLYGON ((31.76338 52.10107, 31.57373 52.10811...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>481 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        admin country  n_communities  \\\n",
-       "0    United States of America      US            115   \n",
-       "1    United States of America      US            115   \n",
-       "2    United States of America      US            115   \n",
-       "3    United States of America      US            115   \n",
-       "4    United States of America      US            115   \n",
-       "..                        ...     ...            ...   \n",
-       "476                    Canada      CA              7   \n",
-       "477                    Canada      CA              7   \n",
-       "478                    Canada      CA              7   \n",
-       "479                    Canada      CA              7   \n",
-       "480                   Belarus      BY              8   \n",
-       "\n",
-       "                                              geometry  \n",
-       "0    POLYGON ((-132.74687 56.52568, -132.75762 56.5...  \n",
-       "1    POLYGON ((-132.77988 56.24727, -132.83096 56.2...  \n",
-       "2    POLYGON ((-134.31274 58.22891, -134.31987 58.2...  \n",
-       "3    POLYGON ((-145.11851 60.33711, -145.15049 60.3...  \n",
-       "4    POLYGON ((-144.56563 59.81841, -144.61357 59.8...  \n",
-       "..                                                 ...  \n",
-       "476  POLYGON ((-109.16641 67.98237, -109.05391 67.9...  \n",
-       "477  POLYGON ((-108.09272 67.00518, -107.96646 66.9...  \n",
-       "478  POLYGON ((-109.32314 67.99087, -109.36084 67.9...  \n",
-       "479  POLYGON ((-139.04312 69.57690, -139.12573 69.5...  \n",
-       "480  POLYGON ((31.76338 52.10107, 31.57373 52.10811...  \n",
-       "\n",
-       "[481 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = df.explode(column='geometry', index_parts = False).reset_index()"
    ]
@@ -588,60 +443,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "4bc2cca6-1f48-44d1-b6cb-0dc49564cc71",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df.iloc[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b4abb73f-9208-4d7b-9284-df546f5bcb34",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df.geom_type[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b3da3f40-b0c8-4269-ace5-c4552a8b9404",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polygon\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.geom_type[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6327d8d1-0451-41e8-834b-2df31169abf0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "shapely.geometry.polygon.Polygon"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df.iloc[0].geometry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a6d7ff42-1376-4ffc-b4ef-f0f55140b305",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-132.948046875, 56.511035156249996, -132.56796875, 56.794775390625)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.iloc[0].geometry.bounds\n",
     "#xmin,ymin,xmax,ymax"
@@ -649,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "5bc55591-0225-44e8-9218-f5585ff05d75",
    "metadata": {
     "tags": []
@@ -661,7 +568,7 @@
        "56.511035156249996"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
